--- a/src/Styling/Artworks.css
+++ b/src/Styling/Artworks.css
@@ -1,31 +1,29 @@
-/* Artworks.css */
 .ArtworkContainer {
-    margin: 20px; /* Add space around the container */
-  }
-  
-  .ArtworkCardContainer {
-    display: flex;
-    overflow-x: scroll;
-    gap: 20px;
-    white-space: nowrap; /* Prevent cards from wrapping */
-  }
-  
-  .ArtworkCard {
-    width: 300px;
-    height: 350px;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    display: inline-block; /* Make the cards inline-block elements */
-  }
-  
-  .ArtworkCard img {
-    max-width: 100%;
-    max-height: 200px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
+  margin: 20px; /* Add space around the container */
+}
+
+.ArtworkCard {
+  width: 700px;
+  height: auto; /* Allow the card height to adjust based on content */
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
+  align-items: center;
+}
+
+.ArtworkCard img {
+  max-width: 100%;
+  max-height: 80%;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.Description {
+  flex-grow: 1; /* Allow the description to expand vertically */
+  word-wrap: break-word; /* Allow long words to break and wrap onto the next line */
+}
