--- a/src/Styling/Artworks.css
+++ b/src/Styling/Artworks.css
@@ -1,9 +1,13 @@
+/* Artworks.css */
 .ArtworkContainer {
   margin: 20px; /* Add space around the container */
+  display: flex; /* Display cards in a row */
+  flex-wrap: wrap; /* Wrap to the next row when necessary */
+  justify-content: center; /* Center-align rows */
 }
 
 .ArtworkCard {
-  width: 700px;
+  width: calc(50% - 10px); /* Set the width to 50% of the container with margin */
   height: auto; /* Allow the card height to adjust based on content */
   background-color: #fff;
   padding: 20px;
@@ -14,6 +18,7 @@
   display: flex;
   flex-direction: column; /* Stack elements vertically */
   align-items: center;
+  margin-bottom: 20px; /* Add space between rows */
 }
 
 .ArtworkCard img {
