--- a/src/Styling/Projects.css
+++ b/src/Styling/Projects.css
@@ -48,3 +48,36 @@
 .card.bouquets {
     background-image: url('../Images/Logo-YK/icon1024_1.jpg');
 }
+
+.BlogListPage {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem;
+    gap: 1rem; /* for spacing between rows */
+  }
+  
+  .BlogCard {
+    flex: 1 0 calc(33.3333% - 1rem); /* taking into account the gap */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adding a subtle shadow for depth */
+    border-radius: 8px; /* Optional: rounding the corners */
+    overflow: hidden; /* to ensure any child content respects the rounded corners */
+    transition: transform 0.3s; /* Optional: for hover effect */
+    margin-bottom: 1rem; /* space between rows */
+  }
+  
+  .BlogCard:hover {
+    transform: translateY(-10px); /* Optional: slight lift on hover */
+  }
+  
+  .BlogCard img {
+    width: 100%; /* Ensuring the image takes the full width of its container */
+    height: auto;
+    display: block; /* Removes any space underneath the image */
+  }
+  
+  .BlogCard p {
+    padding: 1rem; /* Spacing around the title */
+    font-weight: bold;
+    text-align: center;
+  }
