--- a/src/Styling/Projects.css
+++ b/src/Styling/Projects.css
@@ -79,3 +79,49 @@
     border-radius: 10px;
     position: relative;
   }
+
+  /* Style for the navigation container */
+.navbar_Projects {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 100px;
+    background: linear-gradient(45deg, #e44d26, #f16529);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    height: 30px;
+    border-radius: 8px;
+  }
+
+  .navbar_Projects-list {
+    list-style: none;
+    display: flex;
+    justify-content: space-around; 
+    width: 100%;
+    align-items: center;
+  }
+  
+  /* Style for the navigation links */
+  .navbar_Projects-link a {
+    display: inline-block;
+    padding: 10px 20px; /* Adjust padding as needed */
+    text-decoration: none;
+    color: white;
+    font-family: 'Fredericka the Great', cursive;
+    font-weight: bold;
+    position: relative;
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
+  }
+  
+  /* Style for the navigation links on hover */
+  .navbar_Projects-link:hover {
+    background-color: white; /* Hover background color */
+  }
+
+  .navbar_Projects-link:hover a {
+    color: #e44d26; /* Hover color */
+  }
+
+  /* Center align the links within the container */
+  .navbar_Projects-container {
+    width: 100%;
+    }
