--- a/src/Styling/HomePage.css
+++ b/src/Styling/HomePage.css
@@ -4,7 +4,7 @@
 table {
     width: 90%; /* Take the full width of its container */
     border-collapse: collapse; /* Remove spacing between cells */
-    background-color: #f4f4f4; /* Light gray background color */
+    background-color: #fsa945a; /* Light gray background color */
     margin: 20px auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* A subtle shadow to give depth */
 }
@@ -57,12 +57,12 @@ td:last-child {
         transform: translateX(0%);
     }
     50% {
-        transform: translateX(-100%);
+        transform: translateX(-60%);
     }
 }
 
 .rotating-image {
-    width: 400px;
+    width: 200px;
     height: auto;
     animation: spin 30s linear infinite, moveToLeft 60s linear infinite;
 }
@@ -75,7 +75,7 @@ td:last-child {
 }
 
 .theLastHuman {
-    padding-left: 90%;
+    padding-left: 70%;
 }
 
 .read-more-link {
@@ -110,12 +110,12 @@ td:last-child {
 
 .copyright-section {
     text-align: center; /* Centers the text horizontally */
-    padding: 10px 0; /* Adds some padding to the top and bottom */
-    background-color: #2c2c2c; /* A dark background color */
+    padding: 3px 0; /* Adds some padding to the top and bottom */
+    background-color: #6e6e6e; /* A dark background color */
     color: #FFFFFF; /* White text color */
     font-size: 14px; /* A smaller font size */
-    border-top: 1px solid #444; /* A subtle border at the top */
-    margin-top: 20px; /* Margin at the top for separation */
+    border-top: 1px solid #000000; /* A subtle border at the top */
+    margin-top: 0px; /* Margin at the top for separation */
 }
 
 /* Optional: Style the text to look slightly different on hover, for interactivity */
