--- a/src/Styling/Navbar.css
+++ b/src/Styling/Navbar.css
@@ -84,9 +84,9 @@
     font-family: "spinnaker", sans-serif;
     text-transform: uppercase;
     font-size: 0.7em;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.01em;
     font-size: 38px;
-    font-weight: bold;
+    font-weight: normal;
     color: black;
     padding-left: 30%;
     margin: 10px; /* Adds some space between the title and nav links */
