--- a/src/Styling/Projects.css
+++ b/src/Styling/Projects.css
@@ -106,7 +106,7 @@
     padding: 10px 20px; /* Adjust padding as needed */
     text-decoration: none;
     color: white;
-    font-family: 'Fredericka the Great', cursive;
+    font-family: "spinnaker", sans-serif;
     font-weight: bold;
     position: relative;
     transition: background-color 0.3s; /* Smooth transition for hover effect */
