--- a/src/Styling/subscription.css
+++ b/src/Styling/subscription.css
@@ -5,7 +5,7 @@
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    font-family: 'Fredericka the Great', cursive;
+    font-family: "spinnaker", sans-serif;
 }
 
 .newsletter-title {
@@ -42,7 +42,7 @@
 
 .newsletter-button {
     padding: 10px 15px;
-    font-family: 'Fredericka the Great', cursive;
+    font-family: "spinnaker", sans-serif;
     font-size: larger;
     border: none;
     border-radius: 4px;
