--- a/src/Styling/Navbar.css
+++ b/src/Styling/Navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    /* padding: 0 30px; */
     background: linear-gradient(45deg, #e44d26, #f16529);
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     height: 70px;
@@ -21,6 +21,10 @@
     justify-content:center; 
     width: 100%;
     align-items: center;
+}
+
+.navbar-list li {
+    padding-top: 0%;
 }
 
 .navbar-link {
